--- a/Exercícios/exerc021/fundo006.html
+++ b/Exercícios/exerc021/fundo006.html
@@ -8,16 +8,21 @@
     <style>
         body {
              height: 100vh;
-             background-color: black;
+             /* background-color: black;
              background-image: url("imagens/wallpaper002.jpg");
              background-position: center center;
              background-repeat: no-repeat;
              background-size: cover;
-
+             background-attachment: fixed; */
+            
+             /* Shorthand - background 
+             color > image > position > / > size > repeat > attachment
+             */
+             background: black url(imagens/wallpaper002.jpg) center center/cover no-repeat fixed;
         }
         main {
               background-color: white;
-              width: 400px;
+              max-width:400px;
               padding: 10px;
               margin: auto;
               border: 1px solid darkblue;
@@ -30,7 +35,7 @@
         <h1>
             Teste de imagem de fundo
         </h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur possimus expedita officia eaque nihil aperiam perspiciatis vitae eos nam? Explicabo, veritatis. Voluptate reiciendis veritatis iusto ducimus perspiciatis magnam facilis perferendis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor eos maxime vero a in, necessitatibus illo nulla maiores quis iure dicta magnam laborum nostrum vitae perspiciatis officiis obcaecati! Exercitationem, </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur possimus expedita officia eaque nihil aperiam perspiciatis vitae eos nam? Explicabo, veritatis. Voluptate reiciendis veritatis iusto ducimus perspiciatis magnam facilis perferendis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor eos maxime vero a in, necessitatibus illo nulla maiores quis iure dicta magnam laborum nostrum vitae perspiciatis officiis obcaecati! Exercitationem, Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, alias expedita nesciunt omnis quos amet nulla dolore cupiditate hic, officia nisi eaque aliquid eum aperiam illo commodi iure sed debitis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit voluptatibus ea, nesciunt totam ad dolores possimus quibusdam facilis autem modi expedita quos voluptate. Minima cupiditate voluptatum laudantium odit earum aliquid?Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae enim magni, debitis cupiditate sed amet repudiandae libero facilis accusamus corrupti consequuntur, error ducimus optio et. Eos deleniti vitae sunt ducimus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio soluta modi voluptate architecto! Magnam dolores excepturi eaque laudantium, saepe quae quos, earum culpa non numquam labore! Eum modi incidunt minima?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem, corporis quo exercitationem atque tempora cupiditate sint sed voluptas est, non eveniet deleniti sapiente rem, placeat necessitatibus voluptatum repudiandae facilis autem!Lorem Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut saepe debitis dolorem fugiat minima facilis consectetur, eos voluptas odit rem doloremque aliquid possimus voluptatibus enim delectus officia, optio, officiis quas. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque deleniti fuga omnis fugit placeat inventore accusamus consectetur accusantium. Quo animi ipsam reiciendis, in doloremque aut molestiae impedit culpa sed cupiditate? Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, expedita doloremque nam dignissimos nostrum aperiam totam, provident maxime assumenda nesciunt ea doloribus rerum quis modi fuga officiis, perferendis quo pariatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis numquam assumenda amet eligendi labore! Illum quis quas consequuntur quasi recusandae adipisci perspiciatis dolore nisi quidem, voluptas, sunt architecto esse dolor! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur illo, eius beatae mollitia tempora quae perferendis architecto porro eligendi possimus tenetur maiores accusamus. Voluptatum quod quos sit, ullam nesciunt repellat. </p>
     </main>
     
 </body>
