--- a/Desafios/desafio22astronauta/astronauta.html
+++ b/Desafios/desafio22astronauta/astronauta.html
@@ -6,7 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Astronauta</title>
     <style>
+        *{
+            margin: 0px;
+            padding: 0px;
+        }
         body {
+            
             background-color: white;
             background-image: url(imagens/espaco.jpg);
             height: 100vh;
