--- a/Exercícios/exerc022/tabela001.html
+++ b/Exercícios/exerc022/tabela001.html
@@ -14,7 +14,19 @@
        }
        table {
            width: 400px;
+           height: 400px;
+           border-collapse: collapse;
        }
+       
+       td {
+           width: 40px;
+           border: 1px solid black;
+           padding: 8px;
+           text-align: left;
+           vertical-align: middle;
+
+       }
+
        tr.linha {
            
            background-color: gray;
@@ -23,11 +35,9 @@
            background-color: yellow;
            color: green;
        }
-       td {
-           width: 40px;
-           border: 1px solid rgb(0, 0, 0) ;
-           padding: 5px;
 
+       .numero{
+           text-align: right;
        }
     </style>
 </head>
@@ -42,12 +52,12 @@
         <tr>
             <td>A2</td>
             <td>B2</td>
-            <td>B3</td>
+            <td class="numero">C2</td>
         </tr>
         <tr>
             <td class="dado">A3</td>
             <td>B3</td>
-            <td>C3</td>
+            <td class="numero">C3</td>
         </tr>
         <tr>
             <td>A4</td>
